2021-08-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/msl.c (MSLError): Call xmlStopParser() rather than
        setting parser instate = XML_PARSER_EOF.

        * coders/svg.c (SVGError): Call xmlStopParser() rather than
        setting parser instate = XML_PARSER_EOF.

2021-07-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/pdf.c (WritePDFImage): Use appropriate memory deallocator
        for memory returned by StringToList().  Fixes SourceForge issue
        646 "Assertion failed using -label with PDF".

        * coders/webp.c (ReadWEBPImage): Add full error checking when
        retrieving embedded profiles.

        * magick/profile.c (SetImageProfile): Do not try to store a
        zero-sized profile.

        * coders/webp.c (ReadWEBPImage): Enforce that embedded profiles
        provided by libWebP are not zero-sized. This problem was brought
        to our attention by Shane Bishop on the graphicsmagick-help
        mailing list.

2021-07-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * Makefile.am: Add support for using an external
        'graphicsmagick_snapshot_copy' script to copy files for the
        'snapshot' target.  This provides local control over how files are
        copied and where they are copied to.

        * coders/msl.c (MSLStartElement): Use macros to simplify
        validations and reduce repeated code fragments. Add validations
        for image size and pixels present where applicable.  Fixes
        oss-fuzz 36224 "graphicsmagick:coder_MSL_fuzzer: Timeout in
        coder_MSL_fuzzer".

        * magick/transform.c (RollImage): Assert that image rows and
        columns are not zero.

2021-07-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/jp2.c (initialize_jasper): Update for the latest version
        of the evolving jas_init_custom() interface provided by the
        mdadams-callbacks branch.
