@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020210814"
-#define public MagickPackageReleaseDate "snapshot-20210814"
+#define public MagickPackageVersionAddendum ".020210826"
+#define public MagickPackageReleaseDate "snapshot-20210826"
