@@ -35,6 +35,13 @@
 <div class="document">
 
 
+<p>2021-08-26  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<p>* coders/jp2.c (initialize_jasper): Make minimal use of new JasPer
+function jas_initialize() in order to avoid severe problems with
+jas_init().</p>
+<p>* configure.ac: Detect new JasPer function jas_initialize().</p>
+</blockquote>
 <p>2021-08-14  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <p>* coders/msl.c (MSLError): Call xmlStopParser() rather than
